<resources>
    <string name="app_name">EthWeb3j</string>
    <string name="create_wallet">create wallet</string>
    <string name="your_address_will_be_shown_here">your address will be shown here</string>
    <string name="connect">connect to a node</string>
    <string name="address">ADDRESS</string>
    <string name="balance">retrieve balance</string>
    <string name="send">Send</string>
    <string name="please_check_your_balance">your balance will be shown here</string>
    <string name="your_balance">your balance is :</string>
    <string name="enter_eth_value_to_send">enter ETH to send</string>
    <string name="create_ethereum_wallet">Create Ethereum Wallet</string>
    <string name="enter_wallet_name">Enter Wallet Name</string>
    <string name="please_enter_password">please enter password</string>
    <string name="connect_to_ethereum_network">Connect to Ethereum Network</string>
    <string name="send_ethereum">Send ETH</string>
    <string name="your_address">your address is </string>
    <string name="infra_key">ccd9f2c87d39443b82701a0ef5629d0a</string>
</resources>