<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        >

        <TextView
            android:id="@+id/text_headline"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:gravity="center"
            android:text="@string/create_ethereum_wallet"
            android:textAlignment="center"
            android:textSize="24sp"
            android:textStyle="bold"
            app:layout_constraintTop_toTopOf="parent"/>

        <EditText
            android:id="@+id/edit_wallet_path"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_marginLeft="64dp"
            android:layout_marginRight="64dp"
            android:hint="@string/enter_wallet_name"
            app:layout_constraintTop_toBottomOf="@id/text_headline"/>

        <EditText
            android:id="@+id/edit_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginLeft="64dp"
            android:layout_marginRight="64dp"
            android:inputType="numberPassword"
            android:hint="@string/please_enter_password"
            app:layout_constraintTop_toBottomOf="@id/edit_wallet_path"/>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/button_create_wallet"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:text="@string/create_wallet"
            app:layout_constraintTop_toBottomOf="@id/edit_password"
            app:layout_constraintStart_toStartOf="parent"/>

        <TextView
            android:id="@+id/text_address"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:text="@string/your_address_will_be_shown_here"
            android:textAlignment="center"
            app:layout_constraintTop_toBottomOf="@id/button_create_wallet"
            />

        <View
            android:id="@+id/view000"
            android:layout_width="match_parent"
            android:layout_height="4dp"
            android:layout_marginTop="16dp"
            android:background="@color/purple_200"
            app:layout_constraintTop_toBottomOf="@id/text_address"/>

        <TextView
            android:id="@+id/text_node"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:text="@string/connect_to_ethereum_network"
            android:textAlignment="center"
            android:textSize="24sp"
            android:textStyle="bold"
            app:layout_constraintTop_toBottomOf="@id/view000"
            />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/button_connect_to_node"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/connect"
            android:textAlignment="center"
            app:layout_constraintTop_toBottomOf="@id/text_node"
            app:layout_constraintStart_toStartOf="@id/text_node"
            app:layout_constraintEnd_toStartOf="@id/button_balance"/>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/button_balance"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/balance"
            android:textAlignment="center"
            app:layout_constraintTop_toBottomOf="@id/text_node"
            app:layout_constraintStart_toEndOf="@id/button_connect_to_node"
            app:layout_constraintEnd_toEndOf="@id/text_node"
            />

        <TextView
            android:id="@+id/text_balance"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/please_check_your_balance"
            app:layout_constraintTop_toBottomOf="@id/button_connect_to_node"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>

        <View
            android:id="@+id/view001"
            android:layout_width="match_parent"
            android:layout_height="4dp"
            android:layout_marginTop="16dp"
            android:background="@color/purple_200"
            app:layout_constraintTop_toBottomOf="@id/text_balance"/>

        <TextView
            android:id="@+id/text_send_ethereum"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/send_ethereum"
            android:layout_marginTop="12dp"
            android:textAlignment="center"
            android:textSize="24sp"
            android:textStyle="bold"
            app:layout_constraintTop_toBottomOf="@id/view001"/>

        <EditText
            android:id="@+id/edit_eth_to_send"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_marginLeft="32dp"
            android:layout_marginRight="32dp"
            android:gravity="center"
            android:hint="@string/enter_eth_value_to_send"
            app:layout_constraintTop_toBottomOf="@id/text_send_ethereum"/>

        <androidx.appcompat.widget.AppCompatButton
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/send"
            android:layout_marginTop="8dp"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            app:layout_constraintTop_toBottomOf="@id/edit_eth_to_send"
            />

    </androidx.constraintlayout.widget.ConstraintLayout>



</ScrollView>